// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extended-table Column Spanning 1`] = `
"<table><thead><tr><th scope="col">H1</th>
<th scope="col">H2</th>
<th scope="col">H3</th>
</tr></thead><tbody><tr><td colspan=3>This cell spans 3 columns</td>
</tr></tbody></table>"
`;

exports[`extended-table Incomplete Row 1`] = `
"<table><thead><tr><th scope="col">H1</th>
<th scope="col">H2</th>
</tr></thead><tbody><tr><td>Merge empty rows</td>
<td>Cell A</td>
</tr><tr><td></td>
<td></td>
</tr></tbody></table>"
`;

exports[`extended-table Multi-row headers 1`] = `
"<table><thead><tr><th colspan=2 rowspan=2 scope="col">This header spans two columns <em>and</em> two rows </th>
<th scope="col">Header A</th>
</tr><tr><th scope="col">Header B</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td>Cell B</td>
<td>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table No catastophic backtracking for bad delimiter row 1`] = `
"<p>| Header A | Header B | Header C | Header D | Header E | Header F | Header G | Header H |
|:---10%---|:--------:|---------:|:--------:|:--------:|:--------:|:--------:|:-------- :|
| Cell A   | Cell B   | Cell C   | Cell D   | Cell E   | Cell F   | Cell G   | Cell H   |</p>
"
`;

exports[`extended-table Row Merging - config empty 1`] = `
"<table><thead><tr><th scope="col">H1</th>
<th scope="col">H2</th>
</tr></thead><tbody><tr><td>Merge empty rows 1                 </td>
<td>Cell A Cell B  </td>
</tr></tbody></table>"
`;

exports[`extended-table Row Merging - skipEmptyRows: default 1`] = `
"<table><thead><tr><th scope="col">H1</th>
<th scope="col">H2</th>
</tr></thead><tbody><tr><td>Merge empty rows 1                 </td>
<td>Cell A Cell B  </td>
</tr></tbody></table>"
`;

exports[`extended-table Row Merging - skipEmptyRows: false 1`] = `
"<table><thead><tr><th scope="col">H1</th>
<th scope="col">H2</th>
</tr></thead><tbody><tr><td rowspan=3>Merge empty rows 1                 </td>
<td rowspan=3>Cell A Cell B  </td>
</tr><tr></tr><tr></tr></tbody></table>"
`;

exports[`extended-table Row Merging - skipEmptyRows: true 1`] = `
"<table><thead><tr><th scope="col">H1</th>
<th scope="col">H2</th>
</tr></thead><tbody><tr><td>Merge empty rows 1                 </td>
<td>Cell A Cell B  </td>
</tr></tbody></table>"
`;

exports[`extended-table Row Spanning 1`] = `
"<table><thead><tr><th scope="col">H1</th>
<th scope="col">H2</th>
</tr></thead><tbody><tr><td rowspan=3>This cell spans three  rows        </td>
<td>Cell A</td>
</tr><tr><td>Cell B</td>
</tr><tr><td>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table Stops at custom multiline terminators 1`] = `
"<table><thead><tr><th scope="col">Header A</th>
<th scope="col">Header B</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td>Cell B</td>
</tr></tbody></table><p>aaaa
bbbb
cccc</p>
"
`;

exports[`extended-table Stops at custom terminators 1`] = `
"<table><thead><tr><th scope="col">Header A</th>
<th scope="col">Header B</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td>Cell B</td>
</tr></tbody></table><p>aaaa</p>
"
`;

exports[`extended-table Works with combined widths and alignment 1`] = `
"<table><thead><tr><th scope="col" align=left width=10%>Header A</th>
<th scope="col" align=center width=20%>Header B</th>
<th scope="col" align=right width=50%>Header C</th>
</tr></thead><tbody><tr><td align=left width=10%>Cell A</td>
<td align=center width=20%>Cell B</td>
<td align=right width=50%>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table Works with minimal delimiter rows 1`] = `
"<table><thead><tr><th scope="col">Header A</th>
<th scope="col" align=left>Header B</th>
<th scope="col" align=right>Header C</th>
<th scope="col" align=center>Header D</th>
</tr></thead><tbody><tr><td>Cell A</td>
<td align=left>Cell B</td>
<td align=right>Cell C</td>
<td align=center>Cell D</td>
</tr></tbody></table>"
`;

exports[`extended-table Works with mix of widths and not 1`] = `
"<table><thead><tr><th scope="col" width=10%>Header A</th>
<th scope="col">Header B</th>
<th scope="col" width=50%>Header C</th>
</tr></thead><tbody><tr><td width=10%>Cell A</td>
<td>Cell B</td>
<td width=50%>Cell C</td>
</tr></tbody></table>"
`;

exports[`extended-table Works with percentage widths 1`] = `
"<table><thead><tr><th scope="col" width=10%>Header A</th>
</tr></thead><tbody><tr><td width=10%>Cell A</td>
</tr></tbody></table>"
`;

exports[`extended-table Works with text immediately before 1`] = `
"<p>12</p>
<table><thead><tr><th scope="col" align=center width=20%>A</th>
<th scope="col" align=center>B</th>
</tr></thead><tbody><tr><td align=center width=20%>A1</td>
<td align=center>B1</td>
</tr></tbody></table>"
`;
